fix: заменить getFirts() на get(0)